# math_library

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  doc.tex  format.sh  func_tests.cpp  pe.cpp  pe.hpp
include/: math_library.h
include/basic/: basic.h  binary_search.h  fast_pow.h  gcd.h
include/binomial/: binomial.h  fast_binomial_mod_2_32.h  fast_binomial_mod_2_64.h  linear_modulo_preprocessing.h
include/binomial/constants/: coefs_for_fast_binomial_2_32  coefs_for_fast_binomial_2_64
include/factorization/: factorization.h  miller_rabin.h  pollard_rho.h
include/game/: game.h  nimber.h
include/game/constants/: nimber_table.h
include/init/: init.h
include/modulo/: modint.h  modulo.h
include/power_series_ring/: polynomial_kernel.h  power_series_ring.h
include/tools/: tools.h
include/type/: basic_typedef.h  type.h
python/include/: math_library_interface.i
python/include/power_series_ring/: polynomial_interface.i  polynomial_kernel_interface.h  polynomial_kernel_interface.i
python/include/swig/: swig_functions.h
python/src/power_series_ring/: polynomial_kernel_interface.cpp
python/src/swig/: swig_functions.cpp
src/basic/: gcd.cpp
src/binomial/: fast_binomial_mod_2_32.cpp  fast_binomial_mod_2_64.cpp  linear_modulo_preprocessing.cpp
src/factorization/: miller_rabin.cpp  pollard_rho.cpp
src/game/constants/: nimber_table.cpp
src/init/: init.cpp
src/modulo/: modint.cpp
src/power_series_ring/: poly_div.md  polynomial_kernel.cpp
src/tools/: tools.cpp
test/: test.cpp
